echo/echo_ingress_ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: "acme-clusterissuer-http01"
  labels:
    use-http01-solver: "true"
spec:
  tls:
  - hosts:
    - "echo1.pradeep5121.xyz"
    secretName: echo-dev-lahorak8s-io
  rules:
  - host: "echo1.pradeep5121.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
